# LaunchClaw

./: .gitignore  BUILD_TRACKER.md  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  db.py  main.py  scheduler.py
apps/api/app/middleware/: error_handler.py
apps/api/app/routers/: _helpers.py  activity.py  approvals.py  billing.py  claws.py  integrations.py  internal.py  lifecycle.py  runs.py  schedules.py  secrets.py  workspace_files.py
apps/api/app/services/: github_app.py  lifecycle.py  scheduler.py  secret_crypto.py
apps/web/: .env.local.example  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/app/app/create/: page.tsx
apps/web/app/billing/: page.tsx
apps/web/lib/: api.ts  time.ts
apps/web/lib/supabase/: server.ts
docs/: API.md  ARCHITECTURE.md  GITHUB_APP_SETUP.md  PRD.md  SECURITY.md  SECURITY_CHECKLIST.md
services/provisioner/: README.md
services/scheduler/: README.md
services/worker/: README.md
supabase/migrations/: 00001_core_schema.sql  20260309_create_activity_events.sql  20260309_expand_activity_event_types.sql  20260309_phase7_approvals_secrets.sql  20260309z_add_github_integrations.sql  20260309zz_phase5_lifecycle_scheduling.sql  20260309zz_phase6_github_integrations.sql  20260310_phase8_billing_hardening.sql  20260310zz_phase8_billing_fixes.sql  20260310zzz_phase7_secret_approval_hardening.sql
(+12 files in other folders)
